# ContextForge

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
bench-results/: 1000d-flawed-runs.md
bench-results/contextforge-gpt54-180d-30ckpt-sample50-mini-primary-gpt54-appellate-20260618-231527/: failures.jsonl  progress.jsonl  questions.jsonl  result.json
bench-results/contextforge-gpt54-stateless-expanded-clean-180d-30ckpt-sample50-mini-primary-gpt54-appellate-20260619-015200/: failures.jsonl  progress.jsonl  questions.jsonl  result.json
bench-results/contextforge-gpt54-stateless-expanded-clean-180d-30ckpt-sample50-mini-primary-gpt54-appellate-20260619-015200-openclaws-72d-180d-slice/: openclaws-comparison.json  progress.jsonl  result.json  summary.md
bench-results/contextforge-gpt54-wiki-semantic-180d-30ckpt-sample50-no-daylookup-neutralcat-rerun-20260619/: diagnostics.jsonl  failures.jsonl  progress.jsonl  questions.jsonl
bench-results/contextforge-gpt54-wiki-semantic-180d-from72d-sample50-no-daylookup-neutralcat-loaderfix-20260619/: diagnostics.jsonl  failures.jsonl  progress.jsonl  (+2 more)
contextforge/: __init__.py  hyperdense.py  index.py  infinite_context.py  layer.py  loader.py  session.py  tree.py  utils.py  wiki.py
docs/: azure.md  benchmark_design.md  local.md  methodology.md  wiki_memory.md
examples/: azure_openai.py  coding_assistant.py  enterprise_qa.py  local_llm.py  multi_session.py  quickstart.py
tests/: test_hyperdense.py  test_index.py  test_infinite_context.py  test_layer.py  test_loader.py  test_session.py  test_tree.py  test_wiki.py
(+69 files in other folders)
